# webapi

./: .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: mkdocs.yml  orchestrator.yml  tests.yml
api_documentation/: index.html
authentication/: index.html
data/: index.html  raw.py
database/: index.html
dataflow/: index.html
docs/: api_documentation.md  authentication.md  data.md  database.md  dataflow.md  index.md  json_handler.md  preload_data.md  problem.md  solution.md  store_json.md
json_handler/: index.html
preload_data/: index.html
problem/: index.html
search/: search_index.json
solution/: index.html
store_json/: index.html
tests/: test_classes.py  test_database.py  test_store_json.py
usage/: index.html
webapi/: app.py
webapi/backend/: authentication.py  classes.py  models.py
webapi/data/: cache.py  database.py  dataflow.py  json_handler.py  preload_data.py  store_json.py
webapi/logs/: logger.py
webapi/routers/: clients.py  gateway.py  policies.py  users.py
