[tool.poetry]
name = "webapi-code-assessment"
version = "0.1.0"
description = ""
authors = ["joseporiolayats <oriol.ayats@gmail.com>"]
readme = "README.md"
packages = [{include = "webapi_code_assessment"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
pre-commit = "^3.3.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.9"
mkdocstrings-python = "^0.9.0"


[tool.poetry.group.testing.dependencies]
pytest = "^7.3.1"
ruff = "^0.0.264"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
ruff = "^0.0.264"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
